--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -358,7 +358,8 @@ body {
     display: block !important;  
     width: 100px;
     height: auto;
-    margin: 15px auto 20px auto;
+    margin-left: auto;
+    margin-right: auto;
     z-index: 10;
   }
 
